--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Robin Torsius — Links</title>
-  <meta name="description" content="Exploring innovation, growth, and creative projects — links to CV, LinkedIn, phone, YouTube, and more." />
+  <meta name="description" content="Exploring innovation, growth, and creative IT projects — links to CV, LinkedIn, phone, YouTube, and more." />
 
   <!-- Open Graph / Twitter -->
   <meta property="og:title" content="Robin Torsius — Links" />
-  <meta property="og:description" content="Exploring innovation, growth, and creative projects — links to CV, LinkedIn, phone, YouTube, and more." />
+  <meta property="og:description" content="Exploring innovation, growth, and creative IT projects — links to CV, LinkedIn, phone, YouTube, and more." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://rtorsius.me" />
   <meta property="og:image" content="/og.png" />
@@ -42,8 +42,8 @@
     "name": "Robin Torsius",
     "url": "https://rtorsius.me",
     "sameAs": [
-      "https://www.linkedin.com/in/robin-torsius",
-      "https://www.youtube.com/@RT_XP"
+      "http://www.linkedin.com/in/robin-t-68181b33/",
+      "https://www.youtube.com/@RTxperience"
     ]
   }
   </script>
@@ -83,7 +83,7 @@
       <!-- Quick actions -->
       <div class="mt-6 grid gap-3">
         <!-- CV -->
-        <a href="/cv.pdf" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
+        <a href="https://thoughtful-bloom-821.notion.site/Robin-Torsius-cv-26c26fa6f7528092895bcfd65fa49d30" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
           <span class="flex items-center gap-3">
             <svg class="h-5 w-5 opacity-80" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" opacity=".4"/><path d="M14 2v6h6"/></svg>
             <span class="font-medium">Download CV</span>
@@ -92,7 +92,7 @@
         </a>
 
         <!-- LinkedIn -->
-        <a href="https://www.linkedin.com/in/robin-torsius" target="_blank" rel="noopener" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
+        <a href="http://www.linkedin.com/in/robin-t-68181b33/" target="_blank" rel="noopener" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
           <span class="flex items-center gap-3">
             <svg class="h-5 w-5 opacity-80" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM0 8h5v16H0zM9 8h4.8v2.17h.07c.67-1.27 2.3-2.6 4.73-2.6C22.4 7.57 24 10 24 14.1V24h-5v-8.6c0-2.05-.04-4.69-2.86-4.69-2.86 0-3.3 2.23-3.3 4.53V24H8.98z"/></svg>
             <span class="font-medium">LinkedIn</span>
@@ -127,7 +127,7 @@
           <span class="text-xs text-white/60 group-hover:text-xpCyan">Subscribe</span>
         </a>
 
-        <!-- Extra: Portfolio / RT XP hub -->
+        <!-- Extra: Portfolio / RT XP hub 
         <a href="https://rtxp.me" target="_blank" rel="noopener" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
           <span class="flex items-center gap-3">
             <svg class="h-5 w-5 opacity-80" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2Zm1 17.93V20h-2v-.07A8.013 8.013 0 0 1 4.07 13H4v-2h.07A8.013 8.013 0 0 1 11 4.07V4h2v.07A8.013 8.013 0 0 1 19.93 11H20v2h-.07A8.013 8.013 0 0 1 13 19.93Z"/></svg>
@@ -135,7 +135,7 @@
           </span>
           <span class="text-xs text-white/60 group-hover:text-xpCyan">rtxp.me</span>
         </a>
-      </div>
+      </div>  -->
 
       <!-- Footnote -->
       <div class="mt-6 flex items-center justify-between text-xs text-white/50">
@@ -144,12 +144,12 @@
       </div>
     </section>
 
-    <!-- Sub-links (optional) -->
+    <!-- Sub-links (optional) 
     <section class="mt-6 grid gap-3 text-sm">
       <a class="text-white/70 hover:text-xpCyan" href="/privacy.html">Privacy</a>
       <a class="text-white/70 hover:text-xpCyan" href="/impressum.html">Impressum</a>
     </section>
-  </main>
+  </main> -->
 
   <script>
     // Year
