--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <!-- Quick actions -->
       <div class="mt-6 grid gap-3">
         <!-- CV -->
-        <a href="https://thoughtful-bloom-821.notion.site/Robin-Torsius-cv-26c26fa6f7528092895bcfd65fa49d30" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
+        <a href="/cv.pdf" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
           <span class="flex items-center gap-3">
             <svg class="h-5 w-5 opacity-80" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" opacity=".4"/><path d="M14 2v6h6"/></svg>
             <span class="font-medium">Download CV</span>
