--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </a>
 
         <!-- YouTube -->
-        <a href="https://www.youtube.com/@RT_XP" target="_blank" rel="noopener" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
+        <a href="https://www.youtube.com/@RTxperience" target="_blank" rel="noopener" class="glow group flex items-center justify-between rounded-xl border border-white/10 bg-white/5 px-4 py-3 transition hover:border-xpCyan/50">
           <span class="flex items-center gap-3">
             <svg class="h-5 w-5 opacity-80" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M23.5 6.2a3 3 0 0 0-2.1-2.1C19.6 3.5 12 3.5 12 3.5s-7.6 0-9.4.6A3 3 0 0 0 .5 6.2 31.6 31.6 0 0 0 0 12a31.6 31.6 0 0 0 .5 5.8 3 3 0 0 0 2.1 2.1c1.8.6 9.4.6 9.4.6s7.6 0 9.4-.6a3 3 0 0 0 2.1-2.1c.4-1.9.5-3.8.5-5.8s-.1-3.9-.5-5.8zM9.75 15.02V8.98L15.5 12l-5.75 3.02z"/></svg>
             <span class="font-medium">YouTube — RT XP</span>
