--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img src="/avatar.jpg" alt="Robin Torsius" class="h-16 w-16 rounded-full ring-2 ring-xpPurple/60 object-cover" onerror="this.style.display='none'">
         <div>
           <h1 class="text-2xl sm:text-3xl font-semibold tracking-tight">Robin Torsius</h1>
-          <p class="text-white/70 text-sm sm:text-base">Exploring innovation, growth, and creative projects</p>
+          <p class="text-white/70 text-sm sm:text-base">Exploring innovation, growth, and creative IT projects</p>
         </div>
       </div>
 
