--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="title-bar">
         <span>C:\LINKS.EXE</span>
         <div class="title-bar-buttons">
-          <span>_</span><span>&#9633;</span><span>X</span>
+          <span>_</span><span>▢</span><span>X</span>
         </div>
       </div>
 
