--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <div class="p-4 sm:p-6">
         <div class="flex items-center gap-4">
-          <img src="pf2.png" alt="Robin Torsius" class="h-16 w-16 object-cover inset-border" onerror="this.style.display='none'">
+          <img src="pf3.png" alt="Robin Torsius" class="h-16 w-16 object-cover inset-border" onerror="this.style.display='none'">
           <div>
             <h1 id="typing-header" class="text-xl sm:text-2xl"></h1>
           </div>
@@ -129,6 +129,23 @@
           <a href="cv.pdf" class="pixel-button group flex items-center justify-between p-3" data-tooltip="Download my Curriculum Vitae"><span class="flex items-center gap-3"><svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>Document Icon</title><path d="M6 2h10v2H6V2zm0 3h12v2H6V5zm0 3h12v2H6V8zm-2 5H2v-2h2v2zm0-3H2V8h2v2zm0-3H2V5h2v2zm0-3H2V2h2v2zm16 14V2h2v16h-2zm-3 2H5v-2h12v2zm-3 0h-2v2h2v-2zm-3 0H8v2h2v-2zm12-2h-2v2h2v-2zm-3-2h-2v2h2v-2zm-9-1h12v2H8v-2zm14 5v-2h2v2h-2zm-5 2H6v2h10v-2zm1-5h2v2h-2v-2zm-1-2v-2h2v2h-2z"/></svg><span>CV.PDF</span></span><span class="text-gray-500 group-hover:text-black">[VIEW]</span></a>
           <a href="http://www.linkedin.com/in/robin-t-68181b33/" target="_blank" rel="noopener" class="pixel-button group flex items-center justify-between p-3" data-tooltip="View my LinkedIn Profile"><span class="flex items-center gap-3"><svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>LinkedIn Icon</title><path d="M4 2h16v2H4V2zm0 3h16v2H4V5zm0 3h2v12H4V8zm3 0h2v2H7V8zm0 3h2v2H7v-2zm0 3h2v2H7v-2zm0 3h2v2H7v-2zm4-9h8v2h-8V8zm0 3h8v2h-8v-2zm0 3h4v2h-4v-2zm11-11h2v16h-2V2z"/></svg><span>LINKEDIN</span></span><span class="text-gray-500 group-hover:text-black">[CONNECT]</span></a>
           <a href="tel:+31630383138" class="pixel-button group flex items-center justify-between p-3" data-tooltip="Call me on my mobile"><span class="flex items-center gap-3"><svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>Phone Icon</title><path d="M8 2h2v2H8V2zm3 0h2v2h-2V2zm3 0h2v2h-2V2zm-9 3H2v10h2V5zm14 0V2h2v3h-2zm-4 1h-2v2h2V6zm-3 0H8v2h2V6zm-3 0H5v2h2V6zM4 8H2v2h2V8zm16 0h-2v2h2V8zM5 11h2v2H5v-2zm12 0h2v2h-2v-2zm-9 1h2v2H8v-2zm3 0h2v2h-2v-2zm3 0h2v2h-2v-2zM4 15H2v2h2v-2zm16 0h-2v2h2v-2zM8 17h8v2H8v-2zm-3 3H2v2h3v-2zm14 0h-3v2h3v-2z"/></svg><span>PHONE</span></span><span class="text-gray-500 group-hover:text-black">[CALL]</span></a>
+          
+          <a href="https://wa.me/31630383138" target="_blank" rel="noopener" class="pixel-button group flex items-center justify-between p-3" data-tooltip="Message me on WhatsApp">
+            <span class="flex items-center gap-3">
+              <svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>WhatsApp Icon</title><path d="M4 2h16v2H4V2zM2 5h20v12H2V5zm2 13h2v2H4v-2zm3 0h10v2H7v-2zm13 0h2v2h-2v-2zM6 8h2v2H6V8zm2 2h2v-2H8v2zm-2 2H4v-2h2v2zm2-2h2v2H8v-2zm3-2h2v2h-2V8zm-2 5h2v-2H9v2zm2 0h2v-2h-2v2zm-2-2h2v2H9v-2zm5-3h2v2h-2V8zm-2 0h2v2h-2V8zm2 2h2v2h-2v-2zm-2 0h2v2h-2v-2z"/></svg>
+              <span>WHATSAPP</span>
+            </span>
+            <span class="text-gray-500 group-hover:text-black">[CHAT]</span>
+          </a>
+
+          <a href="https://signal.me/#p/+31630383138" target="_blank" rel="noopener" class="pixel-button group flex items-center justify-between p-3" data-tooltip="Message me on Signal">
+            <span class="flex items-center gap-3">
+              <svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>Signal Icon</title><path d="M4 2h16v2H4V2zM2 5h20v12H2V5zm2 13h2v2H4v-2zm3 0h10v2H7v-2zm13 0h2v2h-2v-2zM8 8h2v6H8V8zm3 0h2v6h-2V8zm3 0h2v6h-2V8z"/></svg>
+              <span>SIGNAL</span>
+            </span>
+            <span class="text-gray-500 group-hover:text-black">[SECURE]</span>
+          </a>
+
           <a href="mailto:rtorsius@pm.me" class="pixel-button group flex items-center justify-between p-3" data-tooltip="Send me an email"><span class="flex items-center gap-3"><svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>Email Icon</title><path d="M2 5h20v2L12 13 2 7V5zm0 4v10h20V9l-10 6-10-6z"/></svg><span>EMAIL</span></span><span class="text-gray-500 group-hover:text-black">[SEND]</span></a>
           <a href="https://www.youtube.com/@RTxperience" target="_blank" rel="noopener" class="pixel-button group flex items-center justify-between p-3" data-tooltip="Visit my YouTube Channel"><span class="flex items-center gap-3"><svg class="h-5 w-5" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><title>YouTube Icon</title><path d="M4 4h16v2H4V4zm0 3h16v10H4V7zm2 2v6h2V9H6zm3 0v6l5-3-5-3zm7 0v6h2V9h-2zm-8 9h10v2H8v-2z"/></svg><span>YOUTUBE</span></span><span class="text-gray-500 group-hover:text-black">[WATCH]</span></a>
         </div>
@@ -156,14 +173,12 @@
     }
     setInterval(updateTime, 1000); updateTime();
 
-    // --- NEW: Typing Effect ---
     const headerText = "Robin<br>Torsius";
     const headerElement = document.getElementById('typing-header');
     const blinkingCursorSpan = '<span class="blinking-cursor">_</span>';
     let charIndex = 0;
     function typeWriter() {
       if (charIndex < headerText.length) {
-        // Handle the <br> tag without printing it
         if (headerText.substring(charIndex, charIndex + 4) === '<br>') {
           headerElement.innerHTML = headerText.substring(0, charIndex + 4) + blinkingCursorSpan;
           charIndex += 4;
@@ -171,16 +186,13 @@
           headerElement.innerHTML = headerText.substring(0, charIndex + 1) + blinkingCursorSpan;
           charIndex++;
         }
-        setTimeout(typeWriter, 120); // Adjust speed here (in ms)
+        setTimeout(typeWriter, 120);
       } else {
-         // Keep the cursor blinking at the end
          headerElement.innerHTML = headerText + blinkingCursorSpan;
       }
     }
-    // Add a small delay before starting the typing
     setTimeout(typeWriter, 500);
 
-    // --- Draggable Window (Desktop Only) ---
     if (window.innerWidth >= 768) {
       const draggableWindow = document.getElementById('draggableWindow');
       const titleBar = draggableWindow.querySelector('.title-bar');
