--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>// ROBIN TORSIUS // LINKS.EXE</title>
-  <meta name="description" content="Exploring innovation, growth, and creative IT projects — links to CV, LinkedIn, phone, YouTube, and more." />
+  <meta name="description" content="Exploring innovation, growth, and creative IT projects — links to LinkedIn, phone, YouTube, and more." />
 
   <meta property="og:title" content="Robin Torsius — Links" />
   <meta property="og:description" content="Exploring innovation, growth, and creative IT projects." />
